--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,11 @@ img {
 }
 
 .final_page {
-    color: #ff0000;
+    color: #0d6efd !important;
+}
+
+.red_text {
+    color: #ff0000 !important;
 }
 
 .font-bold{
@@ -159,21 +163,19 @@ header nav ul li a:hover {
 
 .container .background-image {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
     opacity: 0.7;
+    margin-top: 3.8rem;
 }
 
 .container .overlay {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    margin-top: 3.8rem;
 }
 
 .container .content {
@@ -183,6 +185,7 @@ header nav ul li a:hover {
     transform: translate(-50%, -50%);
     text-align: center;
     color: #fff;
+    margin-top: 3.8rem;
 }
 
 .container .content h1 {
@@ -192,119 +195,6 @@ header nav ul li a:hover {
 
 .container .content p {
     font-size: 18px;
-}
-
-
-/* Estilos CSS para el formulario de contacto*/
-.formulario {
-    background-color: rgb(110, 108, 108);
-    width: min(60rem, 100%);
-    /*Utilizar el valor mas pequeño*/
-    margin: 0 auto !important;
-    padding: 2rem;
-
-    border-radius: 20px;
-}
-
-.section-formulario {
-    padding-bottom: 2rem;
-    padding-top: 3rem;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-}
-
-.section-formulario>h2,
-.section-formulario>p {
-    text-align: center;
-}
-
-.formulario fieldset {
-    border: none;
-}
-
-.formulario legend {
-    color: var(--amarillo);
-    text-align: center;
-    font-size: 1.4rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    padding-bottom: 2rem;
-}
-
-.campo {
-    margin-bottom: 1rem;
-}
-
-.campo label {
-    color: var(--blanco);
-    font-weight: bold;
-    margin-bottom: .5rem;
-    display: block;
-}
-
-.campo input,
-textarea {
-    width: 100%;
-    padding: .8rem;
-    border: 1px solid var(--gris);
-    border-radius: 5px;
-    background-color: var(--gris);
-    color: rgb(94, 91, 91);
-    font-weight: bold;
-    font-size: 1.2rem;
-    transition: all .3s ease-in-out;
-}
-
-.campo textarea {
-    height: 15rem;
-    resize: none;
-}
-
-.enviar {
-
-    display: flex !important;
-    justify-content: center;
-    margin-right: 1.8rem;
-}
-
-.boton-contactar {
-
-    margin-left: 1rem;
-    background-color: var(--secundario);
-    color: var(--blanco);
-    font-size: 1.5rem;
-    padding: 1rem;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
-    border: 2px solid var(--blanco);
-    font-weight: bold;
-    text-decoration: none;
-}
-
-.boton-contactar a {
-    padding-top: 1rem;
-    padding-bottom: 1.4rem;
-    padding-left: 1.6rem;
-    padding-right: 1.6rem;
-}
-
-.boton-contactar:hover {
-    background-color: var(--amarillo);
-}
-
-.boton-contactar a:hover {
-    color: black;
-}
-
-.boton-contactar a {
-    color: var(--blanco);
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-.boton-contactar:hover {
-    color: black;
 }
 
 
